# DeConSyn

./: .gitignore  README.md  pyproject.toml
DeConSyn/data/: cardio_transformer.py  data_loader.py  data_transformer.py
DeConSyn/evaluation/: ci.py  consensus.py  delete_excess.py  evaluate_all.py  evaluator.py  evaluator_old.py  loss_curve.py  plot.py  utility.py
DeConSyn/io/: io.py  serialization.py
DeConSyn/logging/: logger.py
DeConSyn/models/: models.py
DeConSyn/pipelines/: config.py  evaluate_exp.py
DeConSyn/training_framework/: start.py  start.sh
DeConSyn/utils/: graph.py
DeFeSyn/: pipeline.py
DeFeSyn/consensus/: Consensus.py
DeFeSyn/data/: DataLoader.py  DataTransformer.py  data_loader.py  data_transformer.py
DeFeSyn/evaluation/: ci.py  consensus.py  data_metrics_plot.py  evaluate_all.py  evaluator.py  metrics.py
DeFeSyn/io/: io.py
DeFeSyn/logging/: logger.py
DeFeSyn/metrics/: CI.py  data_metrics.py  evaluate_all.py  evaluator.py  metrics.py  plot.py
DeFeSyn/models/: models.py
DeFeSyn/pipelines/: evaluate_exp.py
DeFeSyn/spade/: FSMBehaviour.py  NodeAgent.py  PresenceBehaviour.py  ReceiveBehaviour.py  ctgan_model.py  serialization.py  snapshots.py  start.py  start.sh
DeFeSyn/spade_model/: FSMBehaviour.py  NodeAgent.py  PresenceBehaviour.py  start.py
DeFeSyn/training_framework/: start.py  start.sh
DeFeSyn/utils/: graph.py  io.py  seed.py
data/adult/: adult.names
exp/adult/: ctgan_eval_config.toml  tabddpm_config.toml  tabddpm_eval_config.toml
exp/cardio/: ctgan_eval_config.toml  tabddpm_config.toml
(+107 files in other folders)
