[project]
name = "defesyn"
version = "0.1.0"
description = "Decenralized Federated Learning framework for Synthetic Data Generation"
authors = [
    {name = "Tristan Koning",email = "tristan.koning@uzh.ch"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "spade (>=4.1.0,<5.0.0)",
    "pandas (>=2.3.1,<30.0)",
    "ctgan (>=0.11.0,<0.12.0)",
    "frictionless (>=5.18.1,<6.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "anonymeter (>=1.0.0,<2.0.0)",
    "pot (>=0.9.5,<0.10.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "zstandard (>=0.25.0,<0.26.0)",
    "tabulate (>=0.9.0,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "DeFeSym"}]

[tool.poetry.dependencies]
cloudpickle = "^3.0.0"
joblib = "^1.4.2"
